Tk-804.XXX release (XXXX-XX-XX)
------------------

Fixes
 Tk::Text documentation mentioned -reverse where it should be -backwards.
 Also allow -forwards/-backwards to be abbreviated in FindNext call.
 https://rt.cpan.org/Ticket/Display.html?id=51552

Tk-804.028_502 release (2010-01-30)
----------------------

Fixes
 Support for perl 5.11.2 and later (UTF8_MAXLEN_UCLC is not available
 anymore)
 http://rt.cpan.org/Public/Bug/Display.html?id=53465

 Use 'configure' for building libpng under IRIX64
 http://rt.cpan.org/Ticket/Display.html?id=40820

 PNG did not build under AIX and IRIC64, unchecked fix
 http://rt.cpan.org/Ticket/Display.html?id=40064
 http://rt.cpan.org/Ticket/Display.html?id=40820

 Workaround for a perl bug (?) when using "eq" under a Japanese locale
 under Windows (sample fail report:
 http://www.nntp.perl.org/group/perl.cpan.testers/2008/11/msg2550386.html)

 Tk did not support more than 32 fds on 64bit machines
 http://rt.cpan.org/Ticket/Display.html?id=41158

 Tk::Trace fix to make Tk::Gauge work
 http://rt.cpan.org/Ticket/Display.html?id=41069

 Fixed some regular expression-related and other errors, patch by
 Alexander Krasnorutsky, see
 http://rt.cpan.org/Public/Bug/Display.html?id=41068

 Workaround for SvREADONLY issue with 5.8.x
 http://rt.cpan.org/Public/Bug/Display.html?id=41436

 Another possible rgb.txt location, by h.m.brand

 Fix for attaching balloons to items of scrolled widgets
 http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=246363

 Fixed XIM event filtering.

 Fixed compilation with newer gcc
 http://rt.cpan.org/Ticket/Display.html?id=49499

 RecolorTree was broken since Tk-804.027_501 if called separately.
 Reported and patched by Michael Parker
 http://rt.cpan.org/Public/Bug/Display.html?id=49515

 Control-X/Y/C now also works if Caps Lock is active
 http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=205895

 Copy/paste operations between KDE and Perl/Tk applications
 on 64bit system did not work, patch by Petr Pajas
