@@ -6,6 +6,9 @@ Fixes
  Also allow -forwards/-backwards to be abbreviated in FindNext call.
  https://rt.cpan.org/Ticket/Display.html?id=51552
 
+ Added WRITE method for tied Text widgets.
+ https://rt.cpan.org/Ticket/Display.html?id=45818
+
 Tk-804.028_502 release (2010-01-30)
 ----------------------
 
